# arcade-ware

./: .gitignore  README.md  pyproject.toml
aware/: __main__.py  anim.py  bar.py  finder.py  launch.py  play.py  utils.py  window.py
aware/data/: loading.py
aware/data/shaders/: colour_blend_rgb_fs.glsl  projection_uv_2d_vs.glsl  projection_uv_coloured_2d_vs.glsl  wave_fs.glsl
aware/graphics/: gradient.py  style.py  wave.py
aware/views/: main_menu.py
engine/: finder.py  pack.py  play.py  resources.py
packs/: small.py
packs/default/: __init__.py  fails.py  games.py  transitions.py
packs/digi/: __init__.py  charm.py  games.py  noa.py
packs/digi/lib/: slider.py
packs/fun/: __init__.py  games.py  ideas.txt
template/: __init__.py  fails.py  games.py  transitions.py
